--- a/src/main/resources/templates/portfolio.html
+++ b/src/main/resources/templates/portfolio.html
@@ -27,16 +27,14 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/home">Home</a>
+            <a class="navbar-brand" href="/">Home</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-link" href="/about">사업자소개</a>
-                    <a class="nav-link" href="/portfolio">포트폴리오</a>
-                    <a class="nav-link" href="/">견적문의</a>
-                    <a class="nav-link disabled" aria-disabled="true">견적내용</a>
+                    <a class="nav-link" href="/about">회사소개</a>
+                    <a class="nav-link" href="/portfolio">시공사례</a>
                 </div>
             </div>
         </div>
@@ -47,13 +45,13 @@
 
     <script>
         var imageData = [
-            { src: "../static/asset/i1.jpg", text: "Some quick example text 1" },
-            { src: "../static/asset/i2.jpg", text: "Some quick example text 2" },
-            { src: "../static/asset/i3.jpg", text: "Some quick example text 3" },
-            { src: "../static/asset/i4.jpg", text: "Some quick example text 1" },
-            { src: "../static/asset/i5.jpg", text: "Some quick example text 2" },
-            { src: "../static/asset/i6.jpg", text: "Some quick example text 3" },
-            { src: "../static/asset/i7.jpg", text: "Some quick example text 4" },
+            { src: "../../webapp/asset/i1.jpg", text: "Some quick example text 1" },
+            { src: "../../webapp/asset/i2.jpg", text: "Some quick example text 2" },
+            { src: "../../webapp/asset/i3.jpg", text: "Some quick example text 3" },
+            { src: "../../webapp/asset/i4.jpg", text: "Some quick example text 1" },
+            { src: "../../webapp/asset/i5.jpg", text: "Some quick example text 2" },
+            { src: "../../webapp/asset/i6.jpg", text: "Some quick example text 666" },
+            { src: "../../webapp/asset/i7.jpg", text: "Some quick example text 4" },
         ];
 
         // 이미지 컨테이너 요소를 가져옵니다.
