--- a/src/main/resources/templates/image/portfolio.html
+++ b/src/main/resources/templates/image/portfolio.html
@@ -3,26 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>portfolio</title>
+    <link href="/css/portfolio.css" rel="stylesheet"> <!-- CSS 경로 추가 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
-    <style>
-        .card-container {
-            margin-left: 100px;
-            margin-right: 100px;
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-between; /* 카드 사이에 간격을 만듭니다. */
-        }
-
-        .card {
-            flex-basis: calc(33.33% - 40px); /* 3개의 카드를 한 줄에 배치합니다. */
-            margin: 20px;
-            max-width: calc(33.33% - 40px); /* 각 카드의 최대 너비를 설정합니다. */
-        }
-        nav {
-            box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.4); /* 그림자 스타일 및 색상을 설정합니다. */
-        }
-    </style>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -45,13 +28,13 @@
 
     <script>
         var imageData = [
-            { src: "../../webapp/asset/i1.jpg", text: "Some quick example text 1" },
-            { src: "../../webapp/asset/i2.jpg", text: "Some quick example text 2" },
-            { src: "../../webapp/asset/i3.jpg", text: "Some quick example text 3" },
-            { src: "../../webapp/asset/i4.jpg", text: "Some quick example text 1" },
-            { src: "../../webapp/asset/i5.jpg", text: "Some quick example text 2" },
-            { src: "../../webapp/asset/i6.jpg", text: "Some quick example text 666" },
-            { src: "../../webapp/asset/i7.jpg", text: "Some quick example text 4" },
+            { src: "/asset/i1.jpg", text: "Some quick example text 1" },
+            { src: "/asset/i2.jpg", text: "Some quick example text 2" },
+            { src: "/asset/i3.jpg", text: "Some quick example text 3" },
+            { src: "/asset/i4.jpg", text: "Some quick example text 1" },
+            { src: "/asset/i5.jpg", text: "Some quick example text 2" },
+            { src: "/asset/i6.jpg", text: "Some quick example text 666" },
+            { src: "/asset/i7.jpg", text: "Some quick example text 4" },
         ];
 
         // 이미지 컨테이너 요소를 가져옵니다.
