feat(back) : 로그인 및 인증 구현

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>home</title>
@@ -18,8 +18,11 @@
             <div class="navbar-nav">
                 <a class="nav-link nav-item" href="/about">회사소개</a>
                 <a class="nav-link nav-item" href="/portfolio">시공사례</a>
+                <a class="nav-link nav-item" th:if="${principal != null}">이미지 추가하기</a>
+                <a class="nav-link nav-item" th:if="${principal != null}">소개말 바꾸기</a>
             </div>
         </div>
+        <a class="navbar-brand" href="/auth/signin">관리자 로그인</a>
     </div>
 </nav>
 
