--- a/src/main/resources/static/css/portfolio.css
+++ b/src/main/resources/static/css/portfolio.css
@@ -7,10 +7,33 @@
 }
 
 .card {
-    flex-basis: calc(33.33% - 40px); /* 3개의 카드를 한 줄에 배치합니다. */
+    flex-basis: calc(33.33% - 40px);
     margin: 20px;
-    max-width: calc(33.33% - 40px); /* 각 카드의 최대 너비를 설정합니다. */
+    width: 100%; /* 카드의 너비를 플렉스 베이시스에 맞춥니다 */
+    max-width: calc(33.33% - 40px);
+    height: 400px; /* 카드의 높이를 고정합니다 */
 }
+
+.card-img-top {
+    width: 100%; /* 이미지가 카드의 너비에 맞게 조정됩니다 */
+    height: 300px; /* 이미지의 높이를 고정합니다 */
+    object-fit: cover; /* 이미지가 비율을 유지하면서 카드에 꽉 차게 조정됩니다 */
+}
+
 nav {
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.4); /* 그림자 스타일 및 색상을 설정합니다. */
+}
+
+.card-text {
+    display: block;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    max-width: 100%; /* 또는 적절한 너비 제한 */
+}
+
+.autoresize {
+    min-height: 300px;
+    max-height: 800px;
+    overflow-y: hidden;
 }
