--- a/src/main/resources/templates/image/portfolio.html
+++ b/src/main/resources/templates/image/portfolio.html
@@ -1,69 +1,70 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>portfolio</title>
     <link href="/css/portfolio.css" rel="stylesheet"> <!-- CSS 경로 추가 -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+            crossorigin="anonymous"></script>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="/">Home</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                    <a class="nav-link" href="/about">회사소개</a>
-                    <a class="nav-link" href="/portfolio">시공사례</a>
-                </div>
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="/">Home</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a class="nav-link" href="/about">회사소개</a>
+                <a class="nav-link" href="/portfolio">시공사례</a>
+                <button data-bs-toggle="modal" data-bs-target="#uploadModal" th:if="${principal != null}">이미지 추가하기</button>
             </div>
         </div>
-    </nav>
-    <div class="card-container" id="imageContainer">
-        <!-- 여기에 이미지 카드가 자동으로 생성될 것입니다. -->
+    </div>
+</nav>
+
+<!-- Image  -->
+
+<div class="card-container" id="imageContainer">
+    <div th:each="image : ${images}" class="card">
+        <img th:src="@{/upload/{filename}(filename=${image.postImageUrl})}" alt="" class="card-img-top" />
+        <div class="card-body">
+            <p class="card-text" th:text="${#strings.length(image.caption) > 20} ? ${#strings.substring(image.caption, 0, 20)} + '...자세히보기' : ${image.caption}"></p>
+        </div>
     </div>
 
-    <script>
-        var imageData = [
-            { src: "/asset/i1.jpg", text: "Some quick example text 1" },
-            { src: "/asset/i2.jpg", text: "Some quick example text 2" },
-            { src: "/asset/i3.jpg", text: "Some quick example text 3" },
-            { src: "/asset/i4.jpg", text: "Some quick example text 1" },
-            { src: "/asset/i5.jpg", text: "Some quick example text 2" },
-            { src: "/asset/i6.jpg", text: "Some quick example text 666" },
-            { src: "/asset/i7.jpg", text: "Some quick example text 4" },
-        ];
+</div>
 
-        // 이미지 컨테이너 요소를 가져옵니다.
-        var imageContainer = document.getElementById("imageContainer");
+<!-- Image 업로드 Modal -->
+<div class="modal fade" id="uploadModal" tabindex="-1" aria-labelledby="uploadModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="uploadModalLabel">이미지 업로드</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <!-- Image 업로드 form 중요!! -->
+                <form action="/portfolio" method="POST" enctype="multipart/form-data">
+                    <div class="mb-3">
+                        <label for="imageFile" class="form-label">이미지 파일</label>
+                        <input type="file" class="form-control" id="imageFile" name="file" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="imageTitle" class="form-label">시공 내용</label>
+                        <textarea class="form-control autoresize" id="imageTitle" name="caption" rows="10" required></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-primary">업로드</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 
-        // 이미지 데이터 배열을 반복하며 카드를 생성합니다.
-        imageData.forEach(function(imageItem) {
-            var card = document.createElement("div");
-            card.className = "card";
-            card.style.width = "50rem";
-
-            var img = document.createElement("img");
-            img.className = "card-img-top";
-            img.src = imageItem.src;
-            img.alt = "...";
-
-            var cardBody = document.createElement("div");
-            cardBody.className = "card-body";
-
-            var cardText = document.createElement("p");
-            cardText.className = "card-text";
-            cardText.textContent = imageItem.text;
-
-            // 카드를 구성하고 이미지 컨테이너에 추가합니다.
-            cardBody.appendChild(cardText);
-            card.appendChild(img);
-            card.appendChild(cardBody);
-            imageContainer.appendChild(card);
-        });
-    </script>
 </body>
 </html>
