feat(front) : interior 페이지 상세 모달 구현

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -18,7 +18,7 @@
             <div class="navbar-nav">
                 <a class="nav-link nav-item" href="/about">회사소개</a>
                 <a class="nav-link nav-item" href="/portfolio">시공사례</a>
-                <a class="nav-link nav-item" th:if="${principal != null}">이미지 추가하기</a>
+                <a class="nav-link nav-item" th:if="${principal != null}">메인 이미지 추가하기</a>
                 <a class="nav-link nav-item" th:if="${principal != null}">소개말 바꾸기</a>
             </div>
         </div>
