--- a/src/main/resources/templates/image/portfolio.html
+++ b/src/main/resources/templates/image/portfolio.html
@@ -30,15 +30,48 @@
 
 <!-- Image  -->
 
+<!--<div class="card-container" id="imageContainer">-->
+<!--    <div th:each="image : ${images}" class="card">-->
+<!--        <img th:src="@{/upload/{filename}(filename=${image.postImageUrl})}" alt="" class="card-img-top" />-->
+<!--        <div class="card-body">-->
+<!--            <p class="card-text" th:text="${#strings.length(image.caption) > 20} ? ${#strings.substring(image.caption, 0, 20)} + '...자세히보기' : ${image.caption}"></p>-->
+<!--        </div>-->
+<!--    </div>-->
+
+<!--</div>-->
+
+<!-- 각 이미지에 대응하는 모달 구조 -->
 <div class="card-container" id="imageContainer">
-    <div th:each="image : ${images}" class="card">
-        <img th:src="@{/upload/{filename}(filename=${image.postImageUrl})}" alt="" class="card-img-top" />
+    <div th:each="image, iterStat : ${images}" class="card">
+        <!-- 이미지를 클릭했을 때 모달 트리거 설정 -->
+        <img th:src="@{/upload/{filename}(filename=${image.postImageUrl})}" alt="Image" class="card-img-top" data-bs-toggle="modal" th:attr="data-bs-target=${'#imageModal-' + iterStat.index}" />
         <div class="card-body">
             <p class="card-text" th:text="${#strings.length(image.caption) > 20} ? ${#strings.substring(image.caption, 0, 20)} + '...자세히보기' : ${image.caption}"></p>
         </div>
-    </div>
+        <!-- 이미지 클릭 시 상세 내용을 보여줄 모달 -->
+        <div class="modal fade" th:id="${'imageModal-' + iterStat.index}" tabindex="-1" aria-labelledby="imageModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-xl"> <!-- 모달 크기를 크게 조정 -->
+                <div class="modal-content">
+                    <div class="modal-body">
+                        <div class="row"> <!-- 그리드 시스템 사용 -->
+                            <div class="col-md-6">
+                                <img th:src="@{/upload/{filename}(filename=${image.postImageUrl})}" alt="" class="img-fluid" />
+                            </div>
+                            <div class="col-md-6">
+                                <p th:text="${image.caption}"></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">닫기</button>
+                    </div>
+                </div>
+            </div>
+        </div>
 
+    </div>
 </div>
+
 
 <!-- Image 업로드 Modal -->
 <div class="modal fade" id="uploadModal" tabindex="-1" aria-labelledby="uploadModalLabel" aria-hidden="true">
