--- a/src/main/resources/static/css/portfolio.css
+++ b/src/main/resources/static/css/portfolio.css
@@ -37,3 +37,27 @@ nav {
     max-height: 800px;
     overflow-y: hidden;
 }
+
+/* 모달 내 이미지 및 설명 영역 스타일링 */
+.modal-content .row {
+    height: 100%; /* 모달의 높이에 맞춰서 row 높이를 설정합니다. */
+}
+
+.modal-content .col-md-6 {
+    display: flex; /* 내용을 수직 정렬하기 위해 flexbox 사용 */
+    align-items: center; /* 중앙 정렬 */
+    justify-content: center; /* 중앙 정렬 */
+}
+
+.modal-content .col-md-6 img {
+    max-height: 80vh; /* 화면 높이에 맞춰 이미지 최대 높이 설정 */
+    width: auto; /* 이미지의 원래 비율을 유지하면서 너비를 자동으로 조정합니다. */
+    border: 1px solid #ddd; /* 이미지에 테두리 추가 */
+    box-shadow: 2px 2px 10px #ddd; /* 이미지에 그림자 효과 추가 */
+    margin-bottom: 20px; /* 이미지와 설명 사이 간격 추가 */
+}
+
+.modal-content .col-md-6 p {
+    text-align: justify; /* 설명 텍스트 정렬 */
+    padding: 0 20px; /* 좌우 패딩 추가 */
+}
