--- a/src/main/resources/templates/image/portfolio.html
+++ b/src/main/resources/templates/image/portfolio.html
@@ -9,6 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
             crossorigin="anonymous"></script>
+    <script src="/js/portfolio.js"></script>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -27,18 +28,6 @@
         </div>
     </div>
 </nav>
-
-<!-- Image  -->
-
-<!--<div class="card-container" id="imageContainer">-->
-<!--    <div th:each="image : ${images}" class="card">-->
-<!--        <img th:src="@{/upload/{filename}(filename=${image.postImageUrl})}" alt="" class="card-img-top" />-->
-<!--        <div class="card-body">-->
-<!--            <p class="card-text" th:text="${#strings.length(image.caption) > 20} ? ${#strings.substring(image.caption, 0, 20)} + '...자세히보기' : ${image.caption}"></p>-->
-<!--        </div>-->
-<!--    </div>-->
-
-<!--</div>-->
 
 <!-- 각 이미지에 대응하는 모달 구조 -->
 <div class="card-container" id="imageContainer">
@@ -63,6 +52,7 @@
                         </div>
                     </div>
                     <div class="modal-footer">
+                        <button type="button" class="btn btn-danger" th:if="${principal != null}" th:attr="data-image-id=${image.id}" onclick="deleteImage(this.dataset.imageId)">이미지 삭제</button>
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">닫기</button>
                     </div>
                 </div>
