--- a/src/main/resources/templates/image/portfolio.html
+++ b/src/main/resources/templates/image/portfolio.html
@@ -23,7 +23,8 @@
             <div class="navbar-nav">
                 <a class="nav-link" href="/about">회사소개</a>
                 <a class="nav-link" href="/portfolio">시공사례</a>
-                <button data-bs-toggle="modal" data-bs-target="#uploadModal" th:if="${principal != null}">이미지 추가하기</button>
+                <button data-bs-toggle="modal" data-bs-target="#uploadModal" th:if="${principal != null}">이미지 추가하기
+                </button>
             </div>
         </div>
     </div>
@@ -33,18 +34,22 @@
 <div class="card-container" id="imageContainer">
     <div th:each="image, iterStat : ${images}" class="card">
         <!-- 이미지를 클릭했을 때 모달 트리거 설정 -->
-        <img th:src="@{/upload/{filename}(filename=${image.postImageUrl})}" alt="Image" class="card-img-top" data-bs-toggle="modal" th:attr="data-bs-target=${'#imageModal-' + iterStat.index}" />
+        <img th:src="@{/upload/{filename}(filename=${image.postImageUrl})}" alt="Image" class="card-img-top"
+             data-bs-toggle="modal" th:attr="data-bs-target=${'#imageModal-' + iterStat.index}"/>
         <div class="card-body">
-            <p class="card-text" th:text="${#strings.length(image.caption) > 20} ? ${#strings.substring(image.caption, 0, 20)} + '...자세히보기' : ${image.caption}"></p>
+            <p class="card-text"
+               th:text="${#strings.length(image.caption) > 20} ? ${#strings.substring(image.caption, 0, 20)} + '...자세히보기' : ${image.caption}"></p>
         </div>
         <!-- 이미지 클릭 시 상세 내용을 보여줄 모달 -->
-        <div class="modal fade" th:id="${'imageModal-' + iterStat.index}" tabindex="-1" aria-labelledby="imageModalLabel" aria-hidden="true">
+        <div class="modal fade" th:id="${'imageModal-' + iterStat.index}" tabindex="-1"
+             aria-labelledby="imageModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-xl"> <!-- 모달 크기를 크게 조정 -->
                 <div class="modal-content">
                     <div class="modal-body">
                         <div class="row"> <!-- 그리드 시스템 사용 -->
                             <div class="col-md-6">
-                                <img th:src="@{/upload/{filename}(filename=${image.postImageUrl})}" alt="" class="img-fluid" />
+                                <img th:src="@{/upload/{filename}(filename=${image.postImageUrl})}" alt=""
+                                     class="img-fluid"/>
                             </div>
                             <div class="col-md-6">
                                 <p th:text="${image.caption}"></p>
@@ -52,7 +57,10 @@
                         </div>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-danger" th:if="${principal != null}" th:attr="data-image-id=${image.id}" onclick="deleteImage(this.dataset.imageId)">이미지 삭제</button>
+                        <button type="button" class="btn btn-danger" th:if="${principal != null}"
+                                th:attr="data-image-id=${image.id}"
+                                onclick="deletePortfolioImage(this.dataset.imageId)">이미지 삭제
+                        </button>
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">닫기</button>
                     </div>
                 </div>
@@ -80,7 +88,8 @@
                     </div>
                     <div class="mb-3">
                         <label for="imageTitle" class="form-label">시공 내용</label>
-                        <textarea class="form-control autoresize" id="imageTitle" name="caption" rows="10" required></textarea>
+                        <textarea class="form-control autoresize" id="imageTitle" name="caption" rows="10"
+                                  required></textarea>
                     </div>
                     <button type="submit" class="btn btn-primary">업로드</button>
                 </form>
