style(front) : 디자인 수정

--- a/src/main/resources/templates/image/portfolio.html
+++ b/src/main/resources/templates/image/portfolio.html
@@ -59,7 +59,7 @@
                     <div class="modal-footer">
                         <button type="button" class="btn btn-danger" th:if="${principal != null}"
                                 th:attr="data-image-id=${image.id}"
-                                onclick="deletePortfolioImage(this.dataset.imageId)">이미지 삭제
+                                onclick="deletePortfolioImage(this.dataset.imageId)">앨범 영구 삭제하기
                         </button>
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">닫기</button>
                     </div>
