--- a/src/main/resources/static/css/portfolio.css
+++ b/src/main/resources/static/css/portfolio.css
@@ -5,7 +5,16 @@
     flex-wrap: wrap;
     justify-content: space-between; /* 카드 사이에 간격을 만듭니다. */
 }
-
+.carousel {
+    position: relative;
+}
+button {
+  cursor: pointer;
+}
+.carousel-control-prev,
+.carousel-control-next {
+    z-index: 100; /* 다른 요소보다 위에 올 수 있도록 높은 z-index 설정 */
+}
 .card {
     flex-basis: calc(50% - 40px);
     margin: 20px;
@@ -57,10 +66,6 @@ nav {
     margin-bottom: 20px; /* 이미지와 설명 사이 간격 추가 */
 }
 
-.modal-content .col-md-6 p {
-    text-align: justify; /* 설명 텍스트 정렬 */
-    padding: 0 20px; /* 좌우 패딩 추가 */
-}
 .modal-dialog {
     display: flex;
     align-items: center;
@@ -70,4 +75,41 @@ nav {
 
 .modal {
     overflow-y: auto;
+}
+
+
+/* 오버레이 스타일 */
+.overlay {
+    position: fixed; /* Stay in place */
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black with opacity */
+    z-index: 9999; /* Sit on top */
+}
+
+/* 오버레이 콘텐츠 스타일 */
+.overlay-content {
+    position: relative;
+    top: 25%;
+    width: 75%;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    background: white;
+    border-radius: 5px; /* Slightly rounded corners */
+    z-index: 10000;
+}
+
+/* 닫기 버튼 스타일 */
+.btn-close {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    z-index: 10001;
 }
