--- a/src/main/resources/templates/image/portfolio.html
+++ b/src/main/resources/templates/image/portfolio.html
@@ -12,23 +12,22 @@
     <script src="/js/portfolio.js"></script>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/">Home</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+        <a class="navbar-brand" href="/">Design Allim</a>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-link" href="/about">회사소개</a>
-                <a class="nav-link" href="/portfolio">시공사례</a>
+                <a class="nav-link nav-item" href="/portfolio">시공사례</a>
+                <!-- 메인 이미지 추가/삭제 링크 -->
                 <button data-bs-toggle="modal" data-bs-target="#uploadModal" th:if="${principal != null}">이미지 추가하기
                 </button>
             </div>
         </div>
+        <a class="navbar-brand" href="/auth/signin" th:if="${principal == null}">관리자 로그인</a>
+        <a class="navbar-brand" href="/logout" th:if="${principal != null}">로그아웃</a>
     </div>
 </nav>
+
 
 <!-- 각 이미지에 대응하는 카드 구조 -->
 <div class="card-container" id="imageContainer">
