--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -3,32 +3,36 @@
     position: absolute;
     width: 100%;
     z-index: 1;
+    top: 0%;
+    left: 0%;
 }
 
 .navbar a.navbar-brand,
 .navbar a.nav-link {
     color: black !important;
-    font-weight: bold;
+
 }
 
 .nav-link.nav-item-admin {
-    font-weight: bold;
     color: #004085;
 }
 
 .carousel {
-    position: relative;
+    position: absolute;
+    top: 0%;
+    left: 0%;
 }
 
 .carousel-inner {
     width: 100%;
+    top: 0%;
+    left: 0%;
     height: 100vh;
-    object-fit: cover;
 }
 
 .navbar-nav {
     width: 100%;
-    display: flex;
+    display: absolute;
     justify-content: center;
 }
 
@@ -57,6 +61,7 @@
     margin-left: 30px;
     margin-right: 30px;
     font-size: 24px;
-    margin-bottom: 20px;
     color: white;
 }
+
+
