--- a/src/main/resources/templates/image/portfolio.html
+++ b/src/main/resources/templates/image/portfolio.html
@@ -19,7 +19,7 @@
             <div class="navbar-nav">
                 <a class="nav-link nav-item" href="/portfolio">시공사례</a>
                 <!-- 메인 이미지 추가/삭제 링크 -->
-                <button data-bs-toggle="modal" data-bs-target="#uploadModal" th:if="${principal != null}">이미지 추가하기
+                <button data-bs-toggle="modal" data-bs-target="#uploadModal" >이미지 추가하기
                 </button>
             </div>
         </div>
