--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -19,7 +19,7 @@
             <div class="navbar-nav">
                 <a class="nav-link nav-item" href="/portfolio">시공사례</a>
                 <!-- 메인 이미지 추가/삭제 링크 -->
-                <a class="nav-link nav-item" href="#" data-bs-toggle="modal"
+                <a class="nav-link nav-item" href="#" th:if="${principal != null}" data-bs-toggle="modal"
                    data-bs-target="#manageMainImageModal">메인 이미지 관리</a>
                 <a class="nav-link nav-item" href="#" th:if="${principal != null}" data-bs-toggle="modal"
                    data-bs-target="#manageCommentModal">메인 인사말 바꾸기</a>
